--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     //Koin
     def koin_version= "3.1.5"
+    implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
@@ -80,7 +81,6 @@ dependencies {
     implementation("androidx.recyclerview:recyclerview:1.2.1")
 
     //Lifecycle
-
     def lifecycle_version = "2.4.1"
     implementation ("androidx.lifecycle:lifecycle-common:$lifecycle_version")
     implementation ("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
@@ -88,6 +88,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
     kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
 
-
+    //Pagination
+    implementation("androidx.paging:paging-runtime:3.1.0")
 
 }
