--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,7 @@ dependencies {
     //DataStore
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //Coil
+    implementation("io.coil-kt:coil:2.0.0-rc01")
 }
