--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
 
     //Coil
     implementation("io.coil-kt:coil:2.0.0-rc01")
+
+    implementation 'com.jakewharton:process-phoenix:2.1.2'
 }
