--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation("androidx.test:rules:1.4.0")
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
