--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,13 @@ dependencies {
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation("androidx.test:rules:1.4.0")
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
+    androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'app.cash.turbine:turbine:0.7.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -77,6 +80,7 @@ dependencies {
     def koin_version= "3.1.5"
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
 
     //Navigation component
     def nav_version = "2.4.1"
