--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -42,18 +43,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
-    androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation("androidx.test:rules:1.4.0")
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
     androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
     testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'app.cash.turbine:turbine:0.7.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
@@ -64,6 +62,8 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.google.code.gson:gson:2.8.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 
     //Room
     def roomVersion = "2.4.1"
