--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,16 @@
 buildscript {
     dependencies {
         def nav_version = "2.4.1"
+        def kotlin_version = "1.6.10"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
