--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'kotlin-android'
+    id 'com.google.devtools.ksp' version "$ksp_version"
 }
 
 android {
@@ -43,6 +45,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.devtools.ksp:symbol-processing-api:1.6.10-1.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -66,9 +69,9 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 
     //Room
-    def roomVersion = "2.4.1"
+    def roomVersion = "2.4.2"
     implementation("androidx.room:room-runtime:$roomVersion")
-    kapt("androidx.room:room-compiler:$roomVersion")
+    ksp("androidx.room:room-compiler:$roomVersion")
     implementation("androidx.room:room-paging:$roomVersion")
     implementation("androidx.room:room-ktx:$roomVersion")
 
@@ -87,7 +90,6 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
@@ -98,12 +100,11 @@ dependencies {
     def lifecycle_version = "2.4.1"
     implementation ("androidx.lifecycle:lifecycle-common:$lifecycle_version")
     implementation ("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
-    kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
+    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //Pagination
-    implementation("androidx.paging:paging-runtime:3.1.0")
+    implementation("androidx.paging:paging-runtime-ktx:3.1.1")
 
     //Pull to refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
@@ -114,9 +115,6 @@ dependencies {
     //DataStore
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    //Coil
-    implementation("io.coil-kt:coil:2.0.0-rc01")
 
     implementation 'com.jakewharton:process-phoenix:2.1.2'
 }
