--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     androidTestImplementation("androidx.test:rules:1.4.0")
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
     androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
+    testImplementation "io.mockk:mockk:1.12.3"
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'app.cash.turbine:turbine:0.7.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
