--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.devtools.ksp:symbol-processing-api:1.6.10-1.0.2'
+    //Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation("androidx.test:rules:1.4.0")
+    androidTestImplementation("androidx.test:core:1.4.0")
+    androidTestImplementation("androidx.test:runner:1.4.0")
+    androidTestImplementation "io.mockk:mockk:1.12.3"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
     androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
     testImplementation "io.mockk:mockk:1.12.3"
@@ -83,9 +86,10 @@ dependencies {
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     testImplementation "io.insert-koin:koin-test:$koin_version"
+    androidTestImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
     //Navigation component
-    def nav_version = "2.4.1"
+    def nav_version = "2.4.2"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
@@ -99,8 +103,6 @@ dependencies {
     def lifecycle_version = "2.4.1"
     implementation ("androidx.lifecycle:lifecycle-common:$lifecycle_version")
     implementation ("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
-    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //Pagination
     implementation("androidx.paging:paging-runtime-ktx:3.1.1")
