--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,6 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildFeatures{
@@ -93,8 +92,8 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //Coil
+    implementation("io.coil-kt:coil:2.0.0-rc02")
 
     //RV
     implementation("androidx.recyclerview:recyclerview:1.2.1")
