--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,8 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+allprojects {
+    configurations.all {
+        resolutionStrategy.force 'org.objenesis:objenesis:2.6'
+    }
+}
