--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,15 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'kotlin-android'
-    id 'com.google.devtools.ksp' version "$ksp_version"
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.crypto"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,15 +39,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation("androidx.test:rules:1.4.0")
     androidTestImplementation("androidx.test:core:1.4.0")
@@ -59,7 +58,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.12.3"
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'app.cash.turbine:turbine:0.7.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
 
     //Retrofit
@@ -70,15 +69,14 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 
     //Room
-    def roomVersion = "2.4.2"
-    implementation("androidx.room:room-runtime:$roomVersion")
-    ksp("androidx.room:room-compiler:$roomVersion")
-    implementation("androidx.room:room-paging:$roomVersion")
-    implementation("androidx.room:room-ktx:$roomVersion")
+    implementation("androidx.room:room-runtime:2.4.3")
+    kapt("androidx.room:room-compiler:2.4.3")
+    implementation("androidx.room:room-paging:2.4.3")
+    implementation("androidx.room:room-ktx:2.4.3")
 
     //Coroutines and Flow
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
 
     //Koin
     def koin_version= "3.1.5"
@@ -88,7 +86,7 @@ dependencies {
     androidTestImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
     //Navigation component
-    def nav_version = "2.4.2"
+    def nav_version = "2.5.2"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
@@ -99,7 +97,7 @@ dependencies {
     implementation("androidx.recyclerview:recyclerview:1.2.1")
 
     //Lifecycle
-    def lifecycle_version = "2.4.1"
+    def lifecycle_version = "2.5.1"
     implementation ("androidx.lifecycle:lifecycle-common:$lifecycle_version")
     implementation ("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
